<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="360dp"
            android:layout_height="270dp"
            android:scaleType="fitXY"
            android:background="@color/black"
            android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/ps_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="KANIYA VADIK INTER COLLEGE GHAZIABAD"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>
        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Assembly Constituency No. and Name :"
          android:textStyle="bold"
          android:textSize="20sp"
          android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/ac_no_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="56-Ghaziabad"
            android:textSize="20dp"
            android:layout_marginTop="1dp"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Part No.:  "
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/ps_part_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="394"
                android:textSize="20dp"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/ps_img"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/line"
            android:src="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/ps_facility_1"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:drawablePadding="10dp"
                    android:layout_margin="5dp"
                    android:drawableStart="@drawable/ps_icon_1"
                    android:background="@color/bg_no"
                    android:text="@string/ps_text_1"/>
                <TextView
                    android:id="@+id/ps_facility_2"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:drawablePadding="10dp"
                    android:layout_margin="5dp"
                    android:drawableStart="@drawable/ps_icon_2"
                    android:background="@color/bg_no"
                    android:text="@string/ps_text_2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/ps_facility_3"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:drawablePadding="10dp"
                    android:layout_margin="5dp"
                    android:drawableStart="@drawable/ps_icon_3"
                    android:background="@color/bg_no"
                    android:text="@string/ps_text_3"/>
                <TextView
                    android:id="@+id/ps_facility_4"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:drawablePadding="10dp"
                    android:layout_margin="5dp"
                    android:drawableStart="@drawable/ps_icon_4"
                    android:background="@color/bg_no"
                    android:text="@string/ps_text_4"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/ps_facility_5"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:drawablePadding="10dp"
                    android:layout_margin="5dp"
                    android:drawableStart="@drawable/ps_icon_5"
                    android:background="@color/bg_no"
                    android:text="@string/ps_text_5"/>
                <TextView
                    android:id="@+id/ps_facility_6"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:drawablePadding="10dp"
                    android:layout_margin="5dp"
                    android:drawableStart="@drawable/ps_icon_6"
                    android:background="@color/bg_no"
                    android:text="@string/ps_text_6"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/ps_facility_7"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:drawablePadding="10dp"
                    android:layout_margin="5dp"
                    android:drawableStart="@drawable/ps_icon_7"
                    android:background="@color/bg_no"
                    android:text="@string/ps_text_7"/>
                <TextView
                    android:id="@+id/ps_facility_8"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:drawablePadding="10dp"
                    android:layout_margin="5dp"
                    android:drawableStart="@drawable/ps_icon_8"
                    android:background="@color/bg_no"
                    android:text="@string/ps_text_8"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/ps_facility_9"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:drawablePadding="10dp"
                    android:layout_margin="5dp"
                    android:drawableStart="@drawable/ps_icon_9"
                    android:background="@color/bg_no"
                    android:text="@string/ps_text_9"/>
                <TextView
                    android:id="@+id/ps_facility_10"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:drawablePadding="10dp"
                    android:layout_margin="5dp"
                    android:drawableStart="@drawable/ps_icon_10"
                    android:background="@color/bg_no"
                    android:text="@string/ps_text_10"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/ps_facility_11"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:drawablePadding="10dp"
                    android:layout_margin="5dp"
                    android:drawableStart="@drawable/ps_icon_11"
                    android:background="@color/bg_no"
                    android:text="@string/ps_text_11"/>
                <TextView
                    android:id="@+id/ps_facility_12"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:drawablePadding="10dp"
                    android:layout_margin="5dp"
                    android:drawableStart="@drawable/ps_icon_12"
                    android:background="@color/bg_no"
                    android:text="@string/ps_text_12"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>